cli/kubernetes/istio/telemetry/kiali/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: kiali-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 15029
        name: https-kiali
        protocol: HTTPS
      tls:
        mode: SIMPLE
        serverCertificate: sds
        privateKey: sds
        credentialName: telemetry-gw-cert
      hosts:
        - "telemetry.edoxa.gg"
