cli/kubernetes/istio/telemetry/kiali/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kiali-vs
  namespace: istio-system
spec:
  hosts:
    - "telemetry.edoxa.gg"
  gateways:
    - kiali-gateway
  http:
    - match:
        - port: 15029
      route:
        - destination:
            host: kiali
            port:
              number: 20001
